# Croaking_Kero_Game_Framework

./: .gitignore  CMakeLists-old.txt  CMakeLists.txt  README.md
source/framework/: CMakeLists.txt  DEFER.h  NtSetTimerResolution.h  OpenGL2_1.c  OpenGL2_1.h  c23defs.h  cereal.c  cereal.h  discrete_random.h  explorer.c  explorer.h  folders.c  folders.h  folders_common.c  framework.c  framework.h  framework_types.h  log.c  log.h  main.c  menu.c  menu.h  osinterface.c  osinterface.h  osinterface_common.c  render.c  render.h  samples.c  samples.h  sound.c  sound.h  sound_common.c  sound_common.h  sound_windows.c  sound_windows.cpp  sprite.c  sprite.h  turns_math.h  update.c  update.h  (+5 more)
source/framework/linux/: OpenGL2_1.c  OpenGL2_1.h  osinterface.c  sound.c
source/framework/linux/glad/: gl.h  glx.h
source/framework/macos/: osinterface.m  sound.m
source/framework/objects/: _.c  _.h  fullscreen_textbox.c  fullscreen_textbox.h  text_popup.c  text_popup.h
source/framework/posix/: folders.c
source/framework/resources/framework/font/: properties.txt
source/framework/windows/: NtSetTimerResolution.h  OpenGL2_1.c  OpenGL2_1.h  folders.c  osinterface.c  sound.cpp
source/game/: game.c  game.h  game_exports.h  game_menu.c  gameplay.c  resources.c  resources.h
source/game/objects/: text_popup.c  text_popup.h
source/resource_builder/: CMakeLists.txt
source/resource_builder/source/: main.c  midi.c  midi.h
source/resources/: CMakeLists.txt  resources.c  resources.h
source/resources/framework/cursor/: properties.txt
source/resources/framework/font/: properties.txt
source/resources/resources/gameplay/: pipe_body.aseprite  pipe_top.aseprite
source/resources/resources/music/: choppa.ktune  ost1.ksound
source/resources/source/: main.c  midi.c
